--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p></p>Vitória Alves Silva 2° C</p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
